[tool.poetry]
name = "orchid"
version = "0.0.1"
description = "Collection of utils decorators"
authors = ["Caio Ueno <caioluiggy@hotmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.2.0"
discord-webhook = "^1.1.0"
slack-sdk = "^3.20.2"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
